--- a/static/styles.css
+++ b/static/styles.css
@@ -1,9 +1,44 @@
+
+/*-=-=-=-=-=-=-=-=-=-=-=- */
+/* Column Grids */
+/*-=-=-=-=-=-=-=-=-=-=-=- */
+
+.col_half { width: 49%; }
+.col_third { width: 32%; }
+.col_fourth { width: 30%; }
+.col_fifth { width: 18.4%; }
+.col_sixth { width: 15%; }
+.col_three_fourth { width: 74.5%;}
+.col_twothird{ width: 66%;}
+.col_half,
+.col_third,
+.col_twothird,
+.col_fourth,
+.col_three_fourth,
+.col_fifth{
+	position: relative;
+	display:inline;
+	display: inline-block;
+	float: left;
+	margin-right: 2%;
+	margin-bottom: 20px;
+}
+.end { margin-right: 0 !important; }
+/* Column Grids End */
+
+.wrapper { width: 980px; margin: 30px auto; position: relative;}
+.counter { background-color: #000000; padding: 20px 0; border-radius: 5px;}
+.count-title { font-size: 40px; font-weight: normal;  top: 25%; left: 45%; text-align: center; }
+.count-text { font-size: 13px; font-weight: normal;  margin-top: 10px; margin-bottom: 0; text-align: center; }
+.fa-2x { margin: 0 auto; float: none; display: table; color: #4ad1e5; }
+
 body
 {
    margin: 0;
    padding: 0;
    height: 100vh;
    background: black;
+   color: aliceblue;
 }
 
 .pulse
@@ -19,6 +54,15 @@ body
    border-radius: 50%;
    box-shadow: inset 0 0 40px rgba(255, 255, 255, .5);
    animation: animate 24s linear infinite;
+}
+
+.text
+{
+   font-size: 40px;
+   font-weight: normal;
+   margin-top: 10px;
+   margin-bottom: 0;
+   text-align: center;
 }
 
 @keyframes animate {
@@ -38,4 +82,38 @@ body
    100%{
       background-position: 719px 0%;
    }
+}
+
+.button1
+{
+   background-color: #ffffff;
+   border: none;
+   color: black;
+   padding: 15px 32px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 16px;
+   transition-duration: 0.4s;
+   position: absolute;
+   align-content: center;
+   top: 65%;
+   left: 46.5%;
+}
+.button1:hover
+{
+   background-color: #000000;
+   color: white;
+}
+
+#counter1
+{
+   top: 35%;
+   left: 10%;
+}
+
+#counter2
+{
+   top: 35%;
+   left: 30%;
 }
