Added and put a stopwatch to the center

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,6 +14,12 @@
         <div class="text" id="Intro">
             <h4>The Earth is really old!</h4>
         </div>
+        <div class="stopwatch" id="stopwatch">
+            00:00:00
+        </div>
+        <ul class="laps">
+
+        </ul>
         <div class="pulse">
             <span></span>
             <span></span>
