--- a/static/styles.css
+++ b/static/styles.css
@@ -117,3 +117,11 @@ body
    top: 35%;
    left: 30%;
 }
+
+.stopwatch
+{
+   font-size: 5em;
+   text-align: center;
+   left: 50%;
+   top: 50%;
+}
