Got the stopwatch working woohooo

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -43,7 +43,30 @@
     </body>
     <script>
         function transitioner(){
+            executeStopwatch();
             $("#Intro").fadeOut();
+
+            //var obj = document.getElementById()
+        }
+        function executeStopwatch(){
+            let ms = 0, s = 0, m = 0, timer;
+            let stopwatchEl = document.querySelector('.stopwatch');
+            start();
+            function start(){
+                timer = setInterval(run, 10);
+            }
+            function run(){
+                stopwatchEl.textContent = (m < 10 ? "0" + m : m) + ":" + (s < 10 ? "0" + s : s) + ":" + (ms < 10 ? "0" + ms : ms);
+                ms++;
+                if (ms === 100){
+                    ms = 0;
+                    s++;
+                }
+                if (s === 60){
+                    s = 0;
+                    m++;
+                }
+            }
         }
 
         (function ($) {
