--- a/static/styles.css
+++ b/static/styles.css
@@ -125,3 +125,35 @@ body
    left: 50%;
    top: 50%;
 }
+
+.earthAge
+{
+   font-size: 3em;
+   text-align: center;
+   position: absolute;
+   left: 10%;
+   top: 10%;
+}
+
+.calcs
+{
+   font-size: 3em;
+   text-align: center;
+   position: absolute;
+   left: 77.5%;
+   top: 10.2%;
+}
+
+.earthText
+{
+   position: absolute;
+   left: 10%;
+   top: 12%;
+}
+
+.calcsText
+{
+   position: absolute;
+   left: 77.5%;
+   top: 12%
+}
