--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,7 +9,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
         <script src="/script/dynamic.js"></script>
     </head>
-    <body>
+    <body onload="fadersReady()">
 
         <div class="text" id="Intro">
             <h4>The Earth is really old!</h4>
@@ -35,51 +35,69 @@
 
             <div class="counter col_fourth" id="counter2">
                 <i class="fa fa-lightbulb-o fa-2x"></i>
-                <h2 class="timer count-title count-number" data-to="{{ oPS }}" data-speed="1500"></h2>
+                <h2 class="timer count-title count-number" data-to="{{ oPS }}" data-speed="1500" id="h2c2"></h2>
                 <p class="count-text ">Calculations made by Python (a scripting language) 1 second</p>
             </div>
         </div>
-        <button id="button1" class="button1" onclick="transitioner()">Visualize</button>
+
+        <div class="earthAge" id="earthAge">
+            0
+        </div>
+        <p class="count-text" id="earthText">The Age of Earth in Years</p>
+
+        <div class="calcs" id="calcs">
+            0
+        </div>
+         <p class="count-text" id="calcsText">Calculations made by Python hitherto</p>
+
+
+        <button id="button1" class="button1" onclick="transitioner();">Visualize</button>
+
+
     </body>
     <script>
+        let ms = 0, s = 0, m = 0, timer, calculations = 0, earth = 0;
+        function fadersReady(){
+            $("#earthAge").fadeOut();
+            $("#calcs").fadeOut();
+        }
         function transitioner(){
             executeStopwatch();
             $("#Intro").fadeOut();
-
-            //var obj = document.getElementById()
+            $("#counter1").fadeOut();
+            $("#counter2").fadeOut();
+            $("#earthAge").fadeIn();
+            $("#calcs").fadeIn();
         }
-        function executeStopwatch(){
-            let ms = 0, s = 0, m = 0, timer, flag = 1;
+        function executeStopwatch() {
             let stopwatchEl = document.querySelector('.stopwatch');
+            let Cpp = parseInt(document.getElementById("h2c2").getAttribute("data-to"), 10);
+            let planet = document.getElementById("earthAge");
+            let currNum = document.getElementById("calcs")
             start();
-            function start(){
+
+            function start() {
                 timer = setInterval(run, 10);
             }
-            function run(){
-                let totalTime = 0;
-                if (m === 45 && s === 6){
-                    alert("Recognize the excess time");
-                }
+
+            function run() {
                 stopwatchEl.textContent = (m < 10 ? "0" + m : m) + ":" + (s < 10 ? "0" + s : s) + ":" + (ms < 10 ? "0" + ms : ms);
                 ms++;
-                totalTime++;
-                if (ms === 100){
+                calculations = calculations + Cpp;
+                earth = earth + 1000000;
+                planet.innerText = earth.toString();
+                currNum.innerText = calculations.toString();
+                if (ms === 100) {
                     ms = 0;
                     s++;
                 }
-                if (s === 60){
+                if (s === 60) {
                     s = 0;
                     m++;
                 }
                 if (s === 45 && ms === 60) {
                     clearInterval(timer);
-                }
-            }
-            
-            function counter(){
-                let calculations = 0;
-                while (flag === 1){
-                    calculations = calculations + 1;
+                    alert(calculations);
                 }
             }
         }
