--- a/static/styles.css
+++ b/static/styles.css
@@ -156,6 +156,77 @@ body
 {
    text-align: center;
    position: absolute;
-   left: 78 %;
-   top: 17.5%
+   left: 78%;
+   top: 17.5%;
+}
+
+.superset
+{
+   color: white;
+   font-size: 1.5em;
+   text-align: center;
+   position: absolute;
+   left: 15%;
+   top: 25%;
+}
+
+.I-i
+{
+   left: 10%;
+   top: 25%;
+}
+
+.II-i
+{
+   left: 10%;
+   top: 30%;
+}
+
+.III-i
+{
+   left: 10%;
+   top: 35%;
+}
+
+.IV-i
+{
+   left: 10%;
+   top: 40%;
+   word-wrap: break-word;
+}
+
+.V-i
+{
+   left: 10%;
+   top: 45%;
+}
+
+.VI-i
+{
+   left: 10%;
+   top: 50%;
+}
+
+.VII-i
+{
+   left: 10%;
+   top: 55%;
+}
+
+.VIII-i
+{
+   left: 10%;
+   top: 60%;
+}
+
+.IX-i
+{
+   left: 10%;
+   top: 65%;
+}
+
+.X-i
+{
+   left: 10%;
+   top: 70%;
 }
