--- a/static/styles.css
+++ b/static/styles.css
@@ -166,7 +166,17 @@ body
    font-size: 1.5em;
    text-align: center;
    position: absolute;
-   left: 15%;
+   left: 6.5%;
+   top: 25%;
+}
+
+.subset
+{
+   color: white;
+   font-size: 1.5em;
+   text-align: center;
+   position: absolute;
+   left: 75%;
    top: 25%;
 }
 
